History of xm.booking
=====================

0.7 (unreleased)
----------------

- Nothing yet.


0.6 (2008-09-16)
----------------

- Added optional argument 'description' to create_booking.  [maurits]

- Showing booking's description as 'structure' as it is handled as
  webintelligent text in Products.eXtremeManagement's views now. [reinout]


0.5 (2008-03-04)
----------------

- No history recorded.


0.4 (2008-03-04)
----------------

- No history recorded.


0.3 (2008-02-25)
----------------

- No history recorded.